fixed section spacing

--- a/des157/styles.css
+++ b/des157/styles.css
@@ -92,7 +92,7 @@ main section {
     background-repeat: no-repeat;
     width: 225px;
     margin: 10px;
-    padding: 100px 50px;
+    padding: 50px 50px 100px;
     transition: transform .5s ease;
 }
 
